--- a/css/style.css
+++ b/css/style.css
@@ -1744,11 +1744,10 @@ canvas {
 
 #scatterplot-chart {
     width: 100%;
-    height: 90vh;  /* 给图表足够的高度 */
+    height: 90vh;  
     position: relative;
 }
 
-/* 确保散点图的 SVG 元素可见 */
 #scatterplot-chart svg {
     width: 100%;
     height: 100%;
@@ -2223,6 +2222,19 @@ canvas {
 #page5-5 p strong {
     color: #cb181d;
     font-weight: 500;
+}
+
+/* Add cursor styles for line chart */
+.line {
+    cursor: pointer;
+}
+
+.line:hover {
+    cursor: grab;
+}
+
+.line:active {
+    cursor: grabbing;
 }
 
 
