--- a/css/style.css
+++ b/css/style.css
@@ -737,6 +737,9 @@ canvas {
     width: 100%;
     height: 90vh;  /* 给图表足够的高度 */
     position: relative;
+    overflow: auto;
+    max-width: 100vw;
+    max-height: 100vh;
 }
 
 /* 确保散点图的 SVG 元素可见 */
