--- a/css/style.css
+++ b/css/style.css
@@ -1762,8 +1762,8 @@ canvas {
 #timeline-chart {
     position: relative;
     width: 100%;
-    height: 100%;
-    display: flex;
+    height: 600px; /* Adjust this value as needed */
+    margin: 20px 0;
 }
 
 .timeline-controls {
